[Feature/Refactor] Adapt to new model API (#1689)
* switch to new model API

* fixes

* ref: remove unnecessary ModelConfig

* ref: rename ModelComponent.ModelGroup to ModelGroupData to avoid conflicts

* ref: check stockmodel.model

* ref: rename new Api

* ref: use Face in MathUtil

* refactors